--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body {
   
   .description {
     white-space: pre-wrap;
+    background-color: rgb(161, 203, 228);
   }
   
   .time-block {
@@ -37,7 +38,7 @@ body {
   }
   
   .hour {
-    background-color: #ffffff;
+    background-color: #06aed5;
     color: #000000;
     border-top: 1px dashed #000000;
   }
